@@ -5,10 +5,10 @@
 #
 
 # MacOS:
-mount:celestron/0 device.celestron.0 = /dev/cu.usbserial
+mount:celestron/0 device = /dev/cu.usbserial
 
 # Linux
-mount:celestron/0 device.celestron.0 = /dev/ttyUSB0
+mount:celestron/0 device = /dev/ttyUSB0
 
 # Sattelegg
 mount:celestron/0 longitude = 8.84666
